HUD buttons gap fix

--- a/application/client/src/App.css
+++ b/application/client/src/App.css
@@ -19,11 +19,9 @@
     pointer-events: auto;
     background-color: #fff;
     border: 1px solid #000;
-    border-top: 0px;
     border-radius: 0px 0px 10px 10px;
     margin: 0 10px;
-    padding-top: 1rem;
-    padding: 1rem;
+    padding: 1rem;  
     cursor: pointer;
 }
 
